; ModuleID = '/home/carl/AnghaBench/git/extr_http.c_setup_curl_trace.c'
source_filename = "/home/carl/AnghaBench/git/extr_http.c_setup_curl_trace.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@trace_curl = common dso_local global i32 0, align 4
@CURLOPT_VERBOSE = common dso_local global i32 0, align 4
@CURLOPT_DEBUGFUNCTION = common dso_local global i32 0, align 4
@curl_trace = common dso_local global i32* null, align 8
@CURLOPT_DEBUGDATA = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @setup_curl_trace(i32* %0) #0 {
  %2 = alloca i32*, align 8
  store i32* %0, i32** %2, align 8
  %3 = call i32 @trace_want(i32* @trace_curl)
  %4 = icmp ne i32 %3, 0
  br i1 %4, label %6, label %5

5:                                                ; preds = %1
  br label %18

6:                                                ; preds = %1
  %7 = load i32*, i32** %2, align 8
  %8 = load i32, i32* @CURLOPT_VERBOSE, align 4
  %9 = call i32 @curl_easy_setopt(i32* %7, i32 %8, i64 1)
  %10 = load i32*, i32** %2, align 8
  %11 = load i32, i32* @CURLOPT_DEBUGFUNCTION, align 4
  %12 = load i32*, i32** @curl_trace, align 8
  %13 = ptrtoint i32* %12 to i64
  %14 = call i32 @curl_easy_setopt(i32* %10, i32 %11, i64 %13)
  %15 = load i32*, i32** %2, align 8
  %16 = load i32, i32* @CURLOPT_DEBUGDATA, align 4
  %17 = call i32 @curl_easy_setopt(i32* %15, i32 %16, i64 0)
  br label %18

18:                                               ; preds = %6, %5
  ret void
}

declare dso_local i32 @trace_want(i32*) #1

declare dso_local i32 @curl_easy_setopt(i32*, i32, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
